Fix CSS syntax for anchor text alignment

--- a/style.css
+++ b/style.css
@@ -91,5 +91,6 @@ ol {
 }
 
 a{
-  color: red
+  color: red;
+  text-align: center
 }
